--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
+*directory*
+build.ps1
+.postizapp/
+*.log
+*.log.*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
 
 # compiled output
 dist
